Consistent behavior for stream publisher